Closed Bug 1702851 Opened 4 years ago Closed 4 years ago

double tap on generated content zooms the base element

Categories

(Core :: Panning and Zooming, defect, P3)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox89 --- fixed
firefox90 --- fixed

People

(Reporter: tnikkel, Assigned: tnikkel)

References

Details

Attachments

(2 files)

Attached file posh.html
No description provided.
Severity: -- → S3
Priority: -- → P3
Pushed by tnikkel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e6eefb7203fb Allow double tap zoom to zoom to generated content. r=emilio
Regressions: 1709057
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch

Comment on attachment 9213417 [details]
Bug 1702851. Allow double tap zoom to zoom to generated content. r?emilio

Beta/Release Uplift Approval Request

  • User impact if declined: double tap on generated content zooms the base element. in addition this keeps the nightly and beta double tap code in sync which means: a) wider testing for what we plan to ship in beta, b) if any other uplifts are needed for double tap the same patches will work without modification
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): just allows us to zoom to before and after content
  • String changes made/needed:
Attachment #9213417 - Flags: approval-mozilla-beta?
No longer regressions: 1709057

Comment on attachment 9213417 [details]
Bug 1702851. Allow double tap zoom to zoom to generated content. r?emilio

Low risk patch with tests to polish an 89 feature, approved for 89 beta 9, thanks.

Attachment #9213417 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: