Bug 1702851. Allow double tap zoom to zoom to generated content.  r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D110741